# eijiro

./: Cargo.toml  EIJIRO.txt  README.md
eijiro-parser/: Cargo.toml
eijiro-parser/src/: lib.rs
src/: main.rs
